--- a/package.json
+++ b/package.json
@@ -18,16 +18,37 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.0.0",
     "@aws-amplify/backend-cli": "^1.0.1",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "aws-cdk": "^2.137.0",
-    "aws-cdk-lib": "^2.137.0",
+    "@eslint/js": "^9.2.0",
+    "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@testing-library/react": "^15.0.6",
+    "@types/node": "^20.12.10",
+    "@types/react": "^18.3.1",
+    "@types/react-date-range": "^1.4.9",
+    "@types/react-dom": "^18.3.0",
+    "@types/swiper": "^6.0.0",
+    "@types/uuid": "^9.0.8",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "aws-cdk": "^2.140.0",
+    "aws-cdk-lib": "^2.140.0",
     "constructs": "^10.3.0",
+    "daisyui": "^4.10.5",
     "esbuild": "^0.20.2",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
-    "tsx": "^4.7.2",
-    "typescript": "^5.4.5"
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.2.0",
+    "install": "^0.13.0",
+    "jsdom": "^24.0.0",
+    "npm": "^10.8.0",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
+    "tailwindcss": "^3.4.3",
+    "tsx": "^4.9.3",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.9.0",
+    "vitest": "^1.6.0"
   }
 }
