--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.0.0",
     "@aws-amplify/backend-cli": "^1.0.1",
+    "@aws-lambda-powertools/logger": "^2.1.1",
     "@eslint/js": "^9.2.0",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/react": "^15.0.6",
+    "@types/aws-lambda": "^8.10.138",
     "@types/node": "^20.12.10",
     "@types/react": "^18.3.1",
     "@types/react-date-range": "^1.4.9",
